# dotgame

./: CLAUDE.md  HOW_THE_AI_WORKS.md  README.md  dotgame.py  draw.py  game_mode.py  nm_weights_10x10.pt  pt_weights_10x10.pt  pyproject.toml  replay_buffer_10x10.json  requirements.txt  runner.py  settings.py  state.py  territory.py  viewport.py
ai/: __init__.py  base_player.py  dotgame.py  features.py  game_recorder.py  mcts.py  neural_mcts_player.py  nn_player.py  paths.py  pytorch_player.py  replay_trainer.py  runner.py  trainer.py
tests/: conftest.py  test_fastboard.py  test_features.py  test_state.py  test_territory.py
