[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dot-grid"
version = "0.1.0"
description = "A two-player territory game with MCTS and neural-network AI opponents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pygame>=2.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Enables PyTorch Net and Neural MCTS AI modes
torch = [
    "torch>=2.0.0",
]
# Everything
all = [
    "dot-grid[torch]",
]

[project.scripts]
dot-grid = "dotgame:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── Linting / formatting hints (not enforced) ─────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
